gwt update 3 pages jeu accessoire ajout

--- a/nbproject/gwt.properties
+++ b/nbproject/gwt.properties
@@ -1,5 +1,5 @@
 # The names of the modules to compile (separated by a space character)
-gwt.module=org.yournamehere.Main
+gwt.module=org.yournamehere.Main org.yournamehere.AjoutJeu org.yournamehere.AjoutAccessoire
 
 # Folder within the web app context path where the output
 # of the GWT module compilation will be stored.
