--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,7 +19,15 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>GWTService</servlet-name>
+        <url-pattern>/org.yournamehere.Main/gwtservice</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GWTService</servlet-name>
         <url-pattern>/org.yournamehere.AjoutJeu/gwtservice</url-pattern>
+    </servlet-mapping>
+        <servlet-mapping>
+        <servlet-name>GWTService</servlet-name>
+        <url-pattern>/org.yournamehere.AjoutAccessoire/gwtservice</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
