--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -30,12 +30,20 @@
         <servlet-class>org.yournamehere.server.sampleService.GWTServiceAddAccessoryImpl</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>GWTServiceAddImage</servlet-name>
+        <servlet-class>org.yournamehere.server.sampleService.GWTServiceAddImageImpl</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>GWTServiceCopyright</servlet-name>
         <servlet-class>org.yournamehere.server.sampleService.GWTServiceCopyrightImpl</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>GWTService</servlet-name>
         <url-pattern>/org.yournamehere.Main/gwtservice</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GWTServiceAddImage</servlet-name>
+        <url-pattern>/org.yournamehere.AjoutImage/gwtserviceaddimagee</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>GWTService</servlet-name>
