--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         <servlet-name>GWTService</servlet-name>
         <servlet-class>org.yournamehere.server.sampleService.GWTServiceImpl</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GWTServiceDeleteAccount</servlet-name>
+        <servlet-class>org.yournamehere.server.sampleService.GWTServiceDeleteAccountImpl</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
@@ -68,6 +72,10 @@
     <servlet-mapping>
         <servlet-name>GWTServiceCopyright</servlet-name>
         <url-pattern>/org.yournamehere.AjoutJeu/sampleservice/gwtservicecopyright</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GWTServiceDeleteAccount</servlet-name>
+        <url-pattern>/org.yournamehere.Main/sampleservice/gwtservicedeleteaccount</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
