ajout image libs à rajouter: gwtupload commons-fileupload commons-io

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -46,6 +46,10 @@
         <servlet-class>org.yournamehere.server.sampleService.GWTServiceCopyrightImpl</servlet-class>
     </servlet>
     <servlet-mapping>
+        <servlet-name>GWTServiceAddImage</servlet-name>
+        <url-pattern>/org.yournamehere.AjoutImage/gwtserviceaddimage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>GWTService</servlet-name>
         <url-pattern>/org.yournamehere.Main/gwtservice</url-pattern>
     </servlet-mapping>
