--- a/nbproject/gwt.properties
+++ b/nbproject/gwt.properties
@@ -1,5 +1,5 @@
 # The names of the modules to compile (separated by a space character)
-gwt.module=org.yournamehere.Main org.yournamehere.AjoutJeu org.yournamehere.AjoutAccessoire org.yournamehere.SupprimerCompte org.yournamehere.GestionCommandes org.yournamehere.AjoutTriple org.yournamehere.AjoutAutre
+gwt.module=org.yournamehere.AjoutAutre
 #org.yournamehere.AjoutImage
 
 # Folder within the web app context path where the output
