--- a/nbproject/gwt.properties
+++ b/nbproject/gwt.properties
@@ -1,6 +1,7 @@
 # The names of the modules to compile (separated by a space character)
-gwt.module=org.yournamehere.Main org.yournamehere.AjoutJeu org.yournamehere.AjoutAccessoire org.yournamehere.SupprimerCompte org.yournamehere.GestionCommandes org.yournamehere.AjoutTriple 
-#org.yournamehere.AjoutImage
+gwt.module=org.yournamehere.AjoutImage 
+#org.yournamehere.Main org.yournamehere.AjoutJeu org.yournamehere.AjoutAccessoire org.yournamehere.SupprimerCompte org.yournamehere.GestionCommandes org.yournamehere.AjoutTriple 
+
 
 # Folder within the web app context path where the output
 # of the GWT module compilation will be stored.
