création image sans id

--- a/nbproject/gwt.properties
+++ b/nbproject/gwt.properties
@@ -1,5 +1,5 @@
 # The names of the modules to compile (separated by a space character)
-gwt.module=org.yournamehere.AjoutAutre
+gwt.module=org.yournamehere.AjoutImage
 #org.yournamehere.AjoutImage
 
 # Folder within the web app context path where the output
