--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,37 +30,35 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.antlr-2.7.7.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/antlr-2.7.7.jar
-file.reference.antlr-2.7.7.jar-1=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/antlr-2.7.7.jar
-file.reference.avro-1.7.5.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/avro-1.7.5.jar
-file.reference.commons-compress-1.5.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/commons-compress-1.5.jar
-file.reference.dom4j-1.6.1.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/dom4j-1.6.1.jar
-file.reference.dom4j-1.6.1.jar-1=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/dom4j-1.6.1.jar
-file.reference.hibernate-commons-annotations-4.0.2.Final.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/hibernate-commons-annotations-4.0.2.Final.jar
-file.reference.hibernate-commons-annotations-4.0.4.Final.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/hibernate-commons-annotations-4.0.4.Final.jar
-file.reference.hibernate-core-4.2.6.Final.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/hibernate-core-4.2.6.Final.jar
-file.reference.hibernate-core-4.2.7.SP1.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/hibernate-core-4.2.7.SP1.jar
-file.reference.hibernate-entitymanager-4.2.7.SP1.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/jpa/hibernate-entitymanager-4.2.7.SP1.jar
-file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/hibernate-jpa-2.0-api-1.0.1.Final.jar
-file.reference.hibernate-search-engine-4.4.0.Final.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/hibernate-search-engine-4.4.0.Final.jar
-file.reference.hibernate-search-orm-4.4.0.Final.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/hibernate-search-orm-4.4.0.Final.jar
-file.reference.jackson-core-asl-1.9.2.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/jackson-core-asl-1.9.2.jar
-file.reference.jackson-mapper-asl-1.9.2.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/jackson-mapper-asl-1.9.2.jar
-file.reference.javassist-3.15.0-GA.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/javassist-3.15.0-GA.jar
-file.reference.javassist-3.18.1-GA.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/javassist-3.18.1-GA.jar
-file.reference.jboss-logging-3.1.0.GA.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/jboss-logging-3.1.0.GA.jar
-file.reference.jboss-logging-3.1.3.GA.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/jboss-logging-3.1.3.GA.jar
-file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar
-file.reference.jboss-transaction-api_1.1_spec-1.0.1.Final.jar=/home/k/kieffera/ECOM/hibernate-release-4.2.7.SP1/lib/required/jboss-transaction-api_1.1_spec-1.0.1.Final.jar
-file.reference.lucene-core-3.6.2.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/lucene-core-3.6.2.jar
-file.reference.paranamer-2.3.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/paranamer-2.3.jar
-file.reference.slf4j-api-1.6.1.jar=/home/k/kieffera/ECOM/hibernate-search-4.4.0.Final/dist/lib/required/slf4j-api-1.6.1.jar
+file.reference.antlr-2.7.7.jar-2=C:\\Users\\Lucie\\Downloads\\lib\\antlr-2.7.7.jar
+file.reference.avro-1.7.5.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\avro-1.7.5.jar
+file.reference.commons-compress-1.5.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\commons-compress-1.5.jar
+file.reference.commons-fileupload-1.3.jar=C:\\Users\\Lucie\\Downloads\\lib\\commons-fileupload-1.3.jar
+file.reference.dom4j-1.6.1.jar-2=C:\\Users\\Lucie\\Downloads\\lib\\dom4j-1.6.1.jar
+file.reference.gwtupload-0.6.6.jar=C:\\Users\\Lucie\\Downloads\\lib\\gwtupload-0.6.6.jar
+file.reference.hibernate-commons-annotations-4.0.4.Final.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-commons-annotations-4.0.4.Final.jar
+file.reference.hibernate-core-4.2.8.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-core-4.2.8.Final.jar
+file.reference.hibernate-core-4.3.0.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-core-4.3.0.Final.jar
+file.reference.hibernate-entitymanager-4.3.0.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-entitymanager-4.3.0.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-search-engine-4.4.2.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-search-engine-4.4.2.Final.jar
+file.reference.hibernate-search-orm-4.4.2.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\hibernate-search-orm-4.4.2.Final.jar
+file.reference.jackson-core-asl-1.9.2.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\jackson-core-asl-1.9.2.jar
+file.reference.jackson-mapper-asl-1.9.2.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\jackson-mapper-asl-1.9.2.jar
+file.reference.jandex-1.1.0.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\jandex-1.1.0.Final.jar
+file.reference.javassist-3.18.1-GA.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\javassist-3.18.1-GA.jar
+file.reference.jboss-logging-3.1.3.GA.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\jboss-logging-3.1.3.GA.jar
+file.reference.jboss-logging-annotations-1.2.0.Beta1.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\jboss-logging-annotations-1.2.0.Beta1.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=C:\\Users\\Lucie\\Downloads\\lib\\jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.lucene-core-3.6.2.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\lucene-core-3.6.2.jar
+file.reference.paranamer-2.3.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\paranamer-2.3.jar
+file.reference.slf4j-api-1.6.1.jar-1=C:\\Users\\Lucie\\Downloads\\lib\\slf4j-api-1.6.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.el.jar
+j2ee.platform.classpath=${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar
@@ -70,31 +68,29 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.GWT2.5.1.classpath}:\
-    ${file.reference.hibernate-entitymanager-4.2.7.SP1.jar}:\
-    ${file.reference.antlr-2.7.7.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.hibernate-commons-annotations-4.0.2.Final.jar}:\
-    ${file.reference.hibernate-core-4.2.7.SP1.jar}:\
-    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
-    ${file.reference.javassist-3.18.1-GA.jar}:\
-    ${file.reference.jboss-logging-3.1.0.GA.jar}:\
-    ${file.reference.jboss-transaction-api_1.1_spec-1.0.1.Final.jar}:\
-    ${file.reference.hibernate-search-engine-4.4.0.Final.jar}:\
-    ${file.reference.hibernate-search-orm-4.4.0.Final.jar}:\
-    ${file.reference.antlr-2.7.7.jar-1}:\
-    ${file.reference.avro-1.7.5.jar}:\
-    ${file.reference.commons-compress-1.5.jar}:\
-    ${file.reference.dom4j-1.6.1.jar-1}:\
-    ${file.reference.hibernate-commons-annotations-4.0.4.Final.jar}:\
-    ${file.reference.hibernate-core-4.2.6.Final.jar}:\
-    ${file.reference.jackson-core-asl-1.9.2.jar}:\
-    ${file.reference.jackson-mapper-asl-1.9.2.jar}:\
-    ${file.reference.javassist-3.15.0-GA.jar}:\
-    ${file.reference.jboss-logging-3.1.3.GA.jar}:\
-    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
-    ${file.reference.lucene-core-3.6.2.jar}:\
-    ${file.reference.paranamer-2.3.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}
+    ${file.reference.antlr-2.7.7.jar-2}:\
+    ${file.reference.avro-1.7.5.jar-1}:\
+    ${file.reference.commons-compress-1.5.jar-1}:\
+    ${file.reference.commons-fileupload-1.3.jar}:\
+    ${file.reference.dom4j-1.6.1.jar-2}:\
+    ${file.reference.gwtupload-0.6.6.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.4.Final.jar-1}:\
+    ${file.reference.hibernate-core-4.2.8.Final.jar}:\
+    ${file.reference.hibernate-core-4.3.0.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-4.3.0.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.hibernate-search-engine-4.4.2.Final.jar}:\
+    ${file.reference.hibernate-search-orm-4.4.2.Final.jar}:\
+    ${file.reference.jackson-core-asl-1.9.2.jar-1}:\
+    ${file.reference.jackson-mapper-asl-1.9.2.jar-1}:\
+    ${file.reference.jandex-1.1.0.Final.jar}:\
+    ${file.reference.javassist-3.18.1-GA.jar-1}:\
+    ${file.reference.jboss-logging-3.1.3.GA.jar-1}:\
+    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar-1}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
+    ${file.reference.lucene-core-3.6.2.jar-1}:\
+    ${file.reference.paranamer-2.3.jar-1}:\
+    ${file.reference.slf4j-api-1.6.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
